syntax = "proto3";

message CartRequest {
    string id = 1;
}

message CustomerCartRequest {
    string buyerId = 1;
    repeated CartItem items = 2;
}
    
message CustomerCartResponse {
    string buyerId = 1;
    repeated CartItem items = 2;
}

message CartItem {
    int32 ProductId = 1;
    int32 Quantity = 2;
}

service CartRPC {
    rpc GetCartById(CartRequest) returns (CustomerCartResponse);
    rpc UpdateCart(CustomerCartRequest) returns (CustomerCartResponse);
}